fix for media upload two scrollbars

--- a/css/media.css
+++ b/css/media.css
@@ -11,7 +11,7 @@
 #media__left {
     width: 31%;
 
-  /*  height: 100%;*/
+    height: 100%;
     overflow: auto;
     position: absolute;
     left: 0;
@@ -19,7 +19,7 @@
 
 #media__right {
     width: 69%;
-/*    height: 100%;*/
+    height: 100%;
     overflow: auto;
     position: absolute;
     right: 0;
