--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 
 body {
     background: __bg_all__;
-    position: relative;
     overflow-x: hidden;
 }
 
